# Kwik-extractor

./: .replit  app.js  hello.js  index.html  kwik-extractor.js  package-lock.json  package.json  replit.md  server.js  style.css
animepahe-cli/: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  resource.rc
animepahe-cli/.github/workflows/: build-and-release.yml
animepahe-cli/include/: animepahe.hpp  githubupdater.hpp  kwikpahe.hpp  utils.hpp
animepahe-cli/libs/: animepahe.cpp  githubupdater.cpp  kwikpahe.cpp  utils.cpp
